--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/node": "^14.14.0",
     "@types/react": "^16.9.53",
+    "sass": "^1.27.0",
     "typescript": "^4.0.3"
   }
 }
